basic functionality and loading urls

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,9 +4,6 @@ body {
   background: #222;
 }
 
-.map-component {
-    border: 1px dashed #f00;
-    height: 400px;
-    width: 80%;
-    margin: 0 auto;
+.index {
+
 }
