--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,4 @@
+
 /* Base Application Styles */
 body {
 
@@ -7,6 +8,14 @@ body {
 html, body, #app, .main-container {
     height: 100%;
     width: 100%;
+}
+
+.loading {
+    width:100%;
+    height:100%;
+    display:flex;
+    justify-content:center;
+    align-items: center;
 }
 
 .main-container {
