--- a/src/styles/Search.scss
+++ b/src/styles/Search.scss
@@ -1,7 +1,7 @@
 .search-component {
-  input {
-    width:200px;
-    padding:3px;
-    margin:0 10px;
-  }
+  //padding:10px;
+  width:80%;
+  margin:15px auto;
+  left:-5px;
+  position: relative;
 }
