--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,7 +2,8 @@
 
 /* Base Application Styles */
 body {
-
+  font-family: 'Roboto', sans-serif;
+  color:#263238;
 }
 
 // Required for Leaflet Map Sizing
@@ -17,6 +18,7 @@ html, body, #app, .main {
     width:67%;
     z-index:1;
     right:0;
+    margin:0;
     margin-top:10px;
 
     h1 {
@@ -34,6 +36,7 @@ html, body, #app, .main {
     flex-direction: row;
     width:100%;
     height:100%;
+    background:#37474f;
 
     .layout-component {
       flex: 0 0 33%;
@@ -41,11 +44,10 @@ html, body, #app, .main {
       height:100%;
       position: relative;
       overflow-y:scroll;
-      padding:0 10px 10px;
 
       .data-display {
         position: relative;
-        width:100%;
+        padding:0 10px 10px;
       }
     }
 
