--- a/src/styles/Search.scss
+++ b/src/styles/Search.scss
@@ -1,7 +1,6 @@
 .search-component {
-  //padding:10px;
-  width:80%;
-  margin:15px auto;
-  left:-5px;
+  //padding:10px 18px;
+  //width:80%;
+  //margin:15px auto;
   position: relative;
 }
