--- a/src/styles/map/Map.scss
+++ b/src/styles/map/Map.scss
@@ -1,4 +1,8 @@
+@import "../common/mixins";
 
 .map-component {
-
+  width:67%;
+  height:100%;
+  background: #f4f4f4;
+  @include gmd-z-depth(2);
 }
