--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -15,7 +15,6 @@ html, body, #app, .main {
 .main {
   .header {
     position: absolute;
-    width:67%;
     z-index:1;
     right:0;
     margin:0;
@@ -37,6 +36,24 @@ html, body, #app, .main {
     width:100%;
     height:100%;
     background:#37474f;
+  }
+
+  .map-wrapper {
+    height:100%;
+    background: #f4f4f4;
+    @include gmd-z-depth(2);
+  }
+
+  &.sidebar-closed {
+    .map-wrapper, .header {
+      width:100%;
+    }
+  }
+
+  &.sidebar-open {
+    .map-wrapper, .header {
+      width:67%;
+    }
   }
 }
 
